--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -1,8 +1,14 @@
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> 
 
+kolory:
+
+
+ */
+
+/* import, mixiny, reusable*/
 @import "compass/reset/";
 @mixin vertical-align {
     position: relative;
@@ -13,9 +19,26 @@
 }
 
 
-section.main { 
+/* main */
 
+
+section.main { 
+	
+
+	div.container {
+
+		h2 {
+			
+		}
+
+
+
+
+	@include vertical-align;
+	}
 }
+
+/* how it works */
 
 section.howitworks {
 
