--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -16,6 +16,17 @@ fiolet(tło) - #7f578b;
 /* import, mixiny, reusable*/
 @import "compass/reset/";
 
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('../assets/OpenSans-Light-webfont.eot');
+    src: url('../assets/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/OpenSans-Light-webfont.woff') format('woff'),
+         url('../assets/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('../assets/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 @mixin vertical-align {
     position: relative;
@@ -28,22 +39,22 @@ fiolet(tło) - #7f578b;
 
 body {
 	color: #fff;
+	height: 100vh;
 	h1, h2, h3 {
-		font-family: 'Comfortaa';
+		font-family: 'Comfortaa', sans-serif;
 		font-weight: 700;
 	}
 
 	p {
-		font-family: 'Comfortaa';
+		font-family: 'open_sanslight', sans-serif;
 		font-weight: 400;
 	}
 
 	a {
-		font-family: 'Comfortaa';
-		font-weight: 300;
+		font-family: 'open_sanslight', sans-serif;
 	}
 
-	    height: 100vh;
+
 
 }
 
@@ -60,28 +71,51 @@ section.main {
     background-repeat: no-repeat;
     background-position: center;
 
+	nav {
+		img {
+			margin: 50px;
+			width: 187px;
+			height: 45px;
+			//float: left;
+		}
+		ul > li {
+			position: relative;
+			//float: right;
+			
+		}
+
+		ul > li > a {
+			display: block;
+			height: 45px;
+			width: 150px;
+			font-size: 1.2em;
+			text-decoration: none;
+			text-align: center;
+			color: #fff;
+
+		}
+
+	}
 
 	div.container {
+	position: relative;
 	height: 500px;
 	width: 100%;
 	text-align: center;
-	z-index: 1;
-	margin: 50px auto 0 auto;
-	padding: 0 20px;
+	margin: -100px auto 0 auto;
+	padding: 0 10px;
 
 	@include vertical-align;
 
 		h1 {
-
 			font-size: 5em;
 			line-height: 150%;
-
 		}
 
 		h2 {
 
 			font-size: 1.5em;
-			font-weight: 400 !important;
+			font-weight: 400;
 			line-height: 150%;
 			margin-bottom: 100px;
 
@@ -91,18 +125,27 @@ section.main {
 			font-size: 1.5em;
 			text-decoration: none;
 			text-transform: uppercase;
+			font-weight: 300px;
 			color: #fff;
 			border: 1px #fff solid;
 			border-radius: 10px;
 			padding: 10px;
 		}
 
+		a:nth-child(3):hover {
+			padding: 11px;
+		}
+
 		img {
 			position: absolute;
 			height: 48px;
 			width: 48px;
-			top: 80%;
+			top: 69%;
 			left: 48%;
+		}
+
+		img:hover {
+			top:70%;
 		}
 	}
 }
