--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -79,29 +79,35 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 29, ../sass/screen.scss */
+@font-face {
+  font-family: 'open_sanslight';
+  src: url("../assets/OpenSans-Light-webfont.eot");
+  src: url("../assets/OpenSans-Light-webfont.eot?#iefix") format("embedded-opentype"), url("../assets/OpenSans-Light-webfont.woff") format("woff"), url("../assets/OpenSans-Light-webfont.ttf") format("truetype"), url("../assets/OpenSans-Light-webfont.svg#open_sanslight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 40, ../sass/screen.scss */
 body {
   color: #fff;
   height: 100vh;
 }
-/* line 31, ../sass/screen.scss */
+/* line 43, ../sass/screen.scss */
 body h1, body h2, body h3 {
-  font-family: 'Comfortaa';
+  font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
 }
-/* line 36, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 body p {
-  font-family: 'Comfortaa';
+  font-family: 'open_sanslight', sans-serif;
   font-weight: 400;
 }
-/* line 41, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 body a {
-  font-family: 'Comfortaa';
-  font-weight: 300;
+  font-family: 'open_sanslight', sans-serif;
 }
 
 /* main */
-/* line 53, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 section.main {
   min-height: 740px;
   height: 100%;
@@ -111,49 +117,78 @@ section.main {
   background-repeat: no-repeat;
   background-position: center;
 }
-/* line 64, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
+section.main nav img {
+  margin: 50px;
+  width: 187px;
+  height: 45px;
+}
+/* line 81, ../sass/screen.scss */
+section.main nav ul > li {
+  position: relative;
+}
+/* line 87, ../sass/screen.scss */
+section.main nav ul > li > a {
+  display: block;
+  height: 45px;
+  width: 150px;
+  font-size: 1.2em;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+}
+/* line 100, ../sass/screen.scss */
 section.main div.container {
+  position: relative;
   height: 500px;
   width: 100%;
   text-align: center;
-  z-index: 1;
-  margin: 50px auto 0 auto;
-  padding: 0 20px;
+  margin: -100px auto 0 auto;
+  padding: 0 10px;
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 74, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 section.main div.container h1 {
   font-size: 5em;
   line-height: 150%;
 }
-/* line 81, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 section.main div.container h2 {
   font-size: 1.5em;
-  font-weight: 400 !important;
+  font-weight: 400;
   line-height: 150%;
   margin-bottom: 100px;
 }
-/* line 90, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 section.main div.container a:nth-child(3) {
   font-size: 1.5em;
   text-decoration: none;
   text-transform: uppercase;
+  font-weight: 300px;
   color: #fff;
   border: 1px #fff solid;
   border-radius: 10px;
   padding: 10px;
 }
-/* line 100, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
+section.main div.container a:nth-child(3):hover {
+  padding: 11px;
+}
+/* line 139, ../sass/screen.scss */
 section.main div.container img {
   position: absolute;
   height: 48px;
   width: 48px;
-  top: 80%;
+  top: 69%;
   left: 48%;
+}
+/* line 147, ../sass/screen.scss */
+section.main div.container img:hover {
+  top: 70%;
 }
 
 /* how it works */
