--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -86,6 +86,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-weight: normal;
   font-style: normal;
 }
+/* line 38, ../sass/screen.scss */
+* {
+  box-sizing: border-box;
+}
+
 /* line 40, ../sass/screen.scss */
 body {
   color: #fff;
@@ -117,78 +122,98 @@ section.main {
   background-repeat: no-repeat;
   background-position: center;
 }
-/* line 75, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
+section.main nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+}
+/* line 82, ../sass/screen.scss */
 section.main nav img {
-  margin: 50px;
+  margin: 50px 0 0 50px;
   width: 187px;
   height: 45px;
 }
-/* line 81, ../sass/screen.scss */
-section.main nav ul > li {
-  position: relative;
-}
 /* line 87, ../sass/screen.scss */
-section.main nav ul > li > a {
+section.main nav ul {
   display: block;
-  height: 45px;
-  width: 150px;
-  font-size: 1.2em;
+  float: right;
+  position: relative;
+  margin: 55px 55px 0 0;
+}
+/* line 94, ../sass/screen.scss */
+section.main nav ul li {
+  display: inline-block;
+}
+/* line 97, ../sass/screen.scss */
+section.main nav ul li a {
+  display: block;
+  text-transform: uppercase;
+  padding: 15px;
+  font-size: 1em;
   text-decoration: none;
   text-align: center;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: #000 1px 1px 5px;
 }
-/* line 100, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 section.main div.container {
   position: relative;
-  height: 500px;
   width: 100%;
   text-align: center;
-  margin: -100px auto 0 auto;
-  padding: 0 10px;
+  padding: 0 50px;
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 110, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 section.main div.container h1 {
   font-size: 5em;
   line-height: 150%;
+  margin-bottom: 15px;
 }
-/* line 115, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 section.main div.container h2 {
   font-size: 1.5em;
   font-weight: 400;
   line-height: 150%;
   margin-bottom: 100px;
+  padding: 0 20%;
 }
-/* line 124, ../sass/screen.scss */
-section.main div.container a:nth-child(3) {
-  font-size: 1.5em;
+/* line 137, ../sass/screen.scss */
+section.main div.container a.main-button {
+  -webkit-transition: background 1s ease-in-out;
+  -moz-transition: background 1s ease-in-out;
+  -ms-transition: background 1s ease-in-out;
+  -o-transition: background 1s ease-in-out;
+  transition: background 1s ease-in-out;
+  font-size: 1.3em;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 300px;
   color: #fff;
   border: 1px #fff solid;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px 25px;
 }
-/* line 135, ../sass/screen.scss */
-section.main div.container a:nth-child(3):hover {
-  padding: 11px;
+/* line 152, ../sass/screen.scss */
+section.main div.container a.main-button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 139, ../sass/screen.scss */
-section.main div.container img {
-  position: absolute;
+/* line 157, ../sass/screen.scss */
+section.main a.scroll-button {
+  display: block;
   height: 48px;
   width: 48px;
-  top: 69%;
-  left: 48%;
-}
-/* line 147, ../sass/screen.scss */
-section.main div.container img:hover {
-  top: 70%;
+  background: url("../compas/gfx/arrow.png") no-repeat center center;
+  position: absolute;
+  left: 50%;
+  margin-left: -24px;
+  bottom: 50px;
 }
 
 /* how it works */
