--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -96,33 +96,37 @@ body {
   color: #fff;
   height: 100vh;
 }
-/* line 43, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 body h1, body h2, body h3 {
   font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
 }
-/* line 48, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 body p {
   font-family: 'open_sanslight', sans-serif;
-  font-weight: 400;
 }
 /* line 53, ../sass/screen.scss */
 body a {
   font-family: 'open_sanslight', sans-serif;
 }
 
+/* line 61, ../sass/screen.scss */
+.clear {
+  clear: both;
+}
+
 /* main */
-/* line 64, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 section.main {
   min-height: 740px;
   height: 100%;
   width: 100%;
-  background-image: url("../gfx/background_main.jpg");
+  background-image: url("../gfx/background_main2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
-/* line 74, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 section.main nav {
   position: absolute;
   top: 0;
@@ -130,24 +134,25 @@ section.main nav {
   z-index: 999;
   width: 100%;
 }
-/* line 82, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 section.main nav img {
   margin: 50px 0 0 50px;
   width: 187px;
   height: 45px;
+  opacity: .7;
 }
-/* line 87, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 section.main nav ul {
   display: block;
   float: right;
   position: relative;
   margin: 55px 55px 0 0;
 }
-/* line 94, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 section.main nav ul li {
   display: inline-block;
 }
-/* line 97, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 section.main nav ul li a {
   display: block;
   text-transform: uppercase;
@@ -156,9 +161,8 @@ section.main nav ul li a {
   text-decoration: none;
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
-  text-shadow: #000 1px 1px 5px;
 }
-/* line 113, ../sass/screen.scss */
+/* line 118, ../sass/screen.scss */
 section.main div.container {
   position: relative;
   width: 100%;
@@ -170,13 +174,13 @@ section.main div.container {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 121, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 section.main div.container h1 {
   font-size: 5em;
   line-height: 150%;
   margin-bottom: 15px;
 }
-/* line 127, ../sass/screen.scss */
+/* line 132, ../sass/screen.scss */
 section.main div.container h2 {
   font-size: 1.5em;
   font-weight: 400;
@@ -184,7 +188,7 @@ section.main div.container h2 {
   margin-bottom: 100px;
   padding: 0 20%;
 }
-/* line 137, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 section.main div.container a.main-button {
   -webkit-transition: background 1s ease-in-out;
   -moz-transition: background 1s ease-in-out;
@@ -200,16 +204,16 @@ section.main div.container a.main-button {
   border-radius: 10px;
   padding: 20px 25px;
 }
-/* line 152, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 section.main div.container a.main-button:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 157, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 section.main a.scroll-button {
   display: block;
   height: 48px;
   width: 48px;
-  background: url("../compas/gfx/arrow.png") no-repeat center center;
+  background: url("../gfx/arrow.png") no-repeat center center;
   position: absolute;
   left: 50%;
   margin-left: -24px;
@@ -217,3 +221,91 @@ section.main a.scroll-button {
 }
 
 /* how it works */
+/* line 176, ../sass/screen.scss */
+section.how-it-works {
+  position: relative;
+  min-height: 740px;
+  width: 100%;
+  background-color: #623171;
+}
+/* line 182, ../sass/screen.scss */
+section.how-it-works div.container {
+  margin: 0 auto;
+  padding: 70px 5%;
+  background: url("../gfx/logo-background2.png") no-repeat 80% 20%;
+  background-size: 400px 400px;
+}
+/* line 189, ../sass/screen.scss */
+section.how-it-works div.container .proces-text {
+  width: 50%;
+  margin: 50px 0 100px 0;
+  display: inline-block;
+}
+/* line 194, ../sass/screen.scss */
+section.how-it-works div.container .proces-text h3 {
+  font-size: 2.25em;
+  margin-bottom: 50px;
+  color: rgba(255, 255, 255, 0.7);
+}
+/* line 201, ../sass/screen.scss */
+section.how-it-works div.container .proces-text p {
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 150%;
+}
+/* line 211, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container {
+  position: relative;
+  margin: 0 auto;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+/* line 225, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item {
+  padding: 5px;
+  width: 16.66%;
+  height: 220px;
+  margin-top: 10px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+/* line 237, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item span {
+  display: block;
+  height: 27px;
+  width: 70px;
+  margin: 25px auto 0 auto;
+  background: url("../gfx/icon_sprites.png") no-repeat;
+}
+/* line 246, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(1) span {
+  background-position: 0px 0px;
+}
+/* line 251, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(2) span {
+  background-position: -91px 0px;
+}
+/* line 256, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(3) span {
+  background-position: -182px 0px;
+}
+/* line 261, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(4) span {
+  background-position: -273px 0px;
+}
+/* line 266, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(5) span {
+  background-position: -364px 0px;
+}
+/* line 271, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(6) span {
+  background-position: -455px 0px;
+}
