--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -97,26 +97,27 @@ body {
   height: 100vh;
 }
 /* line 44, ../sass/screen.scss */
-body h1, body h2, body h3 {
+body h1, body h2, body h3, body h4 {
   font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
 }
 /* line 49, ../sass/screen.scss */
 body p {
   font-family: 'open_sanslight', sans-serif;
+  padding: 0 5px;
 }
-/* line 53, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 body a {
   font-family: 'open_sanslight', sans-serif;
 }
 
-/* line 61, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 .clear {
   clear: both;
 }
 
 /* main */
-/* line 68, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 section.main {
   min-height: 740px;
   height: 100%;
@@ -126,7 +127,7 @@ section.main {
   background-repeat: no-repeat;
   background-position: center;
 }
-/* line 78, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 section.main nav {
   position: absolute;
   top: 0;
@@ -134,25 +135,25 @@ section.main nav {
   z-index: 999;
   width: 100%;
 }
-/* line 86, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 section.main nav img {
   margin: 50px 0 0 50px;
   width: 187px;
   height: 45px;
   opacity: .7;
 }
-/* line 92, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 section.main nav ul {
   display: block;
   float: right;
   position: relative;
   margin: 55px 55px 0 0;
 }
-/* line 99, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 section.main nav ul li {
   display: inline-block;
 }
-/* line 102, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 section.main nav ul li a {
   display: block;
   text-transform: uppercase;
@@ -162,7 +163,7 @@ section.main nav ul li a {
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
 }
-/* line 118, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 section.main div.container {
   position: relative;
   width: 100%;
@@ -174,13 +175,13 @@ section.main div.container {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 126, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 section.main div.container h1 {
   font-size: 5em;
   line-height: 150%;
   margin-bottom: 15px;
 }
-/* line 132, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 section.main div.container h2 {
   font-size: 1.5em;
   font-weight: 400;
@@ -188,7 +189,7 @@ section.main div.container h2 {
   margin-bottom: 100px;
   padding: 0 20%;
 }
-/* line 142, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 section.main div.container a.main-button {
   -webkit-transition: background 1s ease-in-out;
   -moz-transition: background 1s ease-in-out;
@@ -204,11 +205,11 @@ section.main div.container a.main-button {
   border-radius: 10px;
   padding: 20px 25px;
 }
-/* line 157, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 section.main div.container a.main-button:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 162, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 section.main a.scroll-button {
   display: block;
   height: 48px;
@@ -221,38 +222,38 @@ section.main a.scroll-button {
 }
 
 /* how it works */
-/* line 176, ../sass/screen.scss */
+/* line 177, ../sass/screen.scss */
 section.how-it-works {
   position: relative;
   min-height: 740px;
   width: 100%;
   background-color: #623171;
 }
-/* line 182, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 section.how-it-works div.container {
   margin: 0 auto;
   padding: 70px 5%;
   background: url("../gfx/logo-background2.png") no-repeat 80% 20%;
   background-size: 400px 400px;
 }
-/* line 189, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 section.how-it-works div.container .proces-text {
   width: 50%;
   margin: 50px 0 100px 0;
   display: inline-block;
 }
-/* line 194, ../sass/screen.scss */
+/* line 195, ../sass/screen.scss */
 section.how-it-works div.container .proces-text h3 {
   font-size: 2.25em;
   margin-bottom: 50px;
   color: rgba(255, 255, 255, 0.7);
 }
-/* line 201, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 section.how-it-works div.container .proces-text p {
   color: rgba(255, 255, 255, 0.7);
   line-height: 150%;
 }
-/* line 211, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container {
   position: relative;
   margin: 0 auto;
@@ -265,19 +266,15 @@ section.how-it-works div.container .proces-wrapper .flex-container {
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
 }
-/* line 225, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item {
   padding: 5px;
   width: 16.66%;
   height: 220px;
   margin-top: 10px;
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
   text-align: center;
 }
-/* line 237, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item span {
   display: block;
   height: 27px;
@@ -285,27 +282,38 @@ section.how-it-works div.container .proces-wrapper .flex-container .flex-item sp
   margin: 25px auto 0 auto;
   background: url("../gfx/icon_sprites.png") no-repeat;
 }
-/* line 246, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item h4 {
+  padding-top: 10px;
+  font-size: 1.3em;
+  line-height: 250%;
+}
+/* line 248, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item p {
+  font-size: 1em;
+  line-height: 150%;
+}
+/* line 254, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(1) span {
   background-position: 0px 0px;
 }
-/* line 251, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(2) span {
   background-position: -91px 0px;
 }
-/* line 256, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(3) span {
   background-position: -182px 0px;
 }
-/* line 261, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(4) span {
   background-position: -273px 0px;
 }
-/* line 266, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(5) span {
   background-position: -364px 0px;
 }
-/* line 271, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(6) span {
   background-position: -455px 0px;
 }
