--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -128,6 +128,7 @@ section.main {
 			font-size: 5em;
 			line-height: 150%;
 			margin-bottom: 15px;
+			font-weight: 100;
 		}
 
 		h2 {
@@ -137,6 +138,7 @@ section.main {
 			line-height: 150%;
 			margin-bottom: 100px;
 			padding: 0 20%;
+			font-weight: 100;	
 
 		}
 
@@ -183,27 +185,48 @@ section.how-it-works {
 	div.container {
 	margin: 0 auto;
 	//min-width: 1000px;
-	padding: 70px 5%;
-	background: url("../gfx/logo-background2.png") no-repeat 80% 20%;
-	background-size: 400px 400px;
+	padding: 70px 7%;
+	background: url("../gfx/logo-background2.png") no-repeat 85% 10%;
+	background-size: 500px 500px;
 
 		.proces-text {
 			width: 50%;
-			margin: 50px 0 100px 0;
+			margin: 50px 0 60px 0;
 			display: inline-block;
 
 			h3 {
 				font-size: 2.25em;
 				margin-bottom: 50px;
-				color: rgba(255,255,255,.7);
+				color: #f9f9f9;
 
 			}
 
 			p {
-				color: rgba(255,255,255,.7);
-				line-height: 150%;
+				color: #f9f9f9;
+				line-height: 170%;
 
 			}
+
+			a.contact-with-us {
+			-webkit-transition: background 1s ease-in-out;
+			-moz-transition: background 1s ease-in-out;
+			-ms-transition: background 1s ease-in-out;
+			-o-transition: background 1s ease-in-out;
+			transition: background 1s ease-in-out;
+			font-size: 1em;
+			text-decoration: none;
+			text-transform: uppercase;
+			font-weight: 300px;
+			color: #fff;
+			border: 1px #fff solid;
+			border-radius: 10px;
+			padding: 15px 20px;
+			margin-top: 20px;
+			display: inline-block;
+
+			&:hover {
+					background-color: rgba(255,255,255,.2); 
+				}}
 		}
 
 
@@ -234,7 +257,7 @@ section.how-it-works {
 						span {
 						display: block;
 						height: 27px;
-						width: 70px;
+						width: 72px;
 						margin: 25px auto 0 auto;
 						background: url("../gfx/icon_sprites.png") no-repeat;
 						}
@@ -243,11 +266,13 @@ section.how-it-works {
 							padding-top: 10px;
 							font-size: 1.3em;
 							line-height: 250%;
+							letter-spacing: 2px;
 						}
 
 						p {
 							font-size: 1em;
 							line-height: 150%;
+							padding: 0 10px;
 						}
 
 					&:nth-child(1) {
@@ -277,8 +302,9 @@ section.how-it-works {
 						}
 					&:nth-child(6) {
 						span {
-							background-position: -455px 0px;
+							background-position: -452px 0px;
 							}
+						h4 {letter-spacing: 0px;}
 						}
 				 }
 			}
