--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -180,16 +180,18 @@ section.main div.container h1 {
   font-size: 5em;
   line-height: 150%;
   margin-bottom: 15px;
+  font-weight: 100;
 }
-/* line 133, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 section.main div.container h2 {
   font-size: 1.5em;
   font-weight: 400;
   line-height: 150%;
   margin-bottom: 100px;
   padding: 0 20%;
+  font-weight: 100;
 }
-/* line 143, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 section.main div.container a.main-button {
   -webkit-transition: background 1s ease-in-out;
   -moz-transition: background 1s ease-in-out;
@@ -205,11 +207,11 @@ section.main div.container a.main-button {
   border-radius: 10px;
   padding: 20px 25px;
 }
-/* line 158, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 section.main div.container a.main-button:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 163, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 section.main a.scroll-button {
   display: block;
   height: 48px;
@@ -222,38 +224,60 @@ section.main a.scroll-button {
 }
 
 /* how it works */
-/* line 177, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 section.how-it-works {
   position: relative;
   min-height: 740px;
   width: 100%;
   background-color: #623171;
 }
-/* line 183, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 section.how-it-works div.container {
   margin: 0 auto;
-  padding: 70px 5%;
-  background: url("../gfx/logo-background2.png") no-repeat 80% 20%;
-  background-size: 400px 400px;
+  padding: 70px 7%;
+  background: url("../gfx/logo-background2.png") no-repeat 85% 10%;
+  background-size: 500px 500px;
 }
-/* line 190, ../sass/screen.scss */
+/* line 192, ../sass/screen.scss */
 section.how-it-works div.container .proces-text {
   width: 50%;
-  margin: 50px 0 100px 0;
+  margin: 50px 0 60px 0;
   display: inline-block;
 }
-/* line 195, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 section.how-it-works div.container .proces-text h3 {
   font-size: 2.25em;
   margin-bottom: 50px;
-  color: rgba(255, 255, 255, 0.7);
+  color: #f9f9f9;
 }
-/* line 202, ../sass/screen.scss */
+/* line 204, ../sass/screen.scss */
 section.how-it-works div.container .proces-text p {
-  color: rgba(255, 255, 255, 0.7);
-  line-height: 150%;
+  color: #f9f9f9;
+  line-height: 170%;
 }
-/* line 212, ../sass/screen.scss */
+/* line 210, ../sass/screen.scss */
+section.how-it-works div.container .proces-text a.contact-with-us {
+  -webkit-transition: background 1s ease-in-out;
+  -moz-transition: background 1s ease-in-out;
+  -ms-transition: background 1s ease-in-out;
+  -o-transition: background 1s ease-in-out;
+  transition: background 1s ease-in-out;
+  font-size: 1em;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 300px;
+  color: #fff;
+  border: 1px #fff solid;
+  border-radius: 10px;
+  padding: 15px 20px;
+  margin-top: 20px;
+  display: inline-block;
+}
+/* line 227, ../sass/screen.scss */
+section.how-it-works div.container .proces-text a.contact-with-us:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+/* line 235, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container {
   position: relative;
   margin: 0 auto;
@@ -266,7 +290,7 @@ section.how-it-works div.container .proces-wrapper .flex-container {
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
 }
-/* line 226, ../sass/screen.scss */
+/* line 249, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item {
   padding: 5px;
   width: 16.66%;
@@ -274,46 +298,52 @@ section.how-it-works div.container .proces-wrapper .flex-container .flex-item {
   margin-top: 10px;
   text-align: center;
 }
-/* line 234, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item span {
   display: block;
   height: 27px;
-  width: 70px;
+  width: 72px;
   margin: 25px auto 0 auto;
   background: url("../gfx/icon_sprites.png") no-repeat;
 }
-/* line 242, ../sass/screen.scss */
+/* line 265, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item h4 {
   padding-top: 10px;
   font-size: 1.3em;
   line-height: 250%;
+  letter-spacing: 2px;
 }
-/* line 248, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item p {
   font-size: 1em;
   line-height: 150%;
+  padding: 0 10px;
 }
-/* line 254, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(1) span {
   background-position: 0px 0px;
 }
-/* line 259, ../sass/screen.scss */
+/* line 284, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(2) span {
   background-position: -91px 0px;
 }
-/* line 264, ../sass/screen.scss */
+/* line 289, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(3) span {
   background-position: -182px 0px;
 }
-/* line 269, ../sass/screen.scss */
+/* line 294, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(4) span {
   background-position: -273px 0px;
 }
-/* line 274, ../sass/screen.scss */
+/* line 299, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(5) span {
   background-position: -364px 0px;
 }
-/* line 279, ../sass/screen.scss */
+/* line 304, ../sass/screen.scss */
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(6) span {
-  background-position: -455px 0px;
+  background-position: -452px 0px;
+}
+/* line 307, ../sass/screen.scss */
+section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(6) h4 {
+  letter-spacing: 0px;
 }
