--- a/compas/stylesheets/screen.css
+++ b/compas/stylesheets/screen.css
@@ -347,3 +347,82 @@ section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nt
 section.how-it-works div.container .proces-wrapper .flex-container .flex-item:nth-child(6) h4 {
   letter-spacing: 0px;
 }
+
+/* line 315, ../sass/screen.scss */
+section.portfolio {
+  position: relative;
+  min-height: 740px;
+  width: 100%;
+  background-color: #fff;
+}
+/* line 321, ../sass/screen.scss */
+section.portfolio h3 {
+  font-size: 5em;
+  margin: 50px 0;
+  color: #7f578b;
+  text-align: center;
+}
+/* line 330, ../sass/screen.scss */
+section.portfolio div.row_1 div, section.portfolio div.row_3 div {
+  width: 25%;
+  height: 400px;
+  display: inline-block;
+  margin: -2px;
+}
+/* line 335, ../sass/screen.scss */
+section.portfolio div.row_1 div:nth-child(1), section.portfolio div.row_3 div:nth-child(1) {
+  background-color: #f5f5f5;
+}
+/* line 338, ../sass/screen.scss */
+section.portfolio div.row_1 div:nth-child(2), section.portfolio div.row_3 div:nth-child(2) {
+  background-color: #f1f1f1;
+}
+/* line 341, ../sass/screen.scss */
+section.portfolio div.row_1 div:nth-child(3), section.portfolio div.row_3 div:nth-child(3) {
+  background-color: #eaeaea;
+}
+/* line 344, ../sass/screen.scss */
+section.portfolio div.row_1 div:nth-child(4), section.portfolio div.row_3 div:nth-child(4) {
+  background-color: #d8d8d8;
+}
+/* line 349, ../sass/screen.scss */
+section.portfolio div.row_1 img, section.portfolio div.row_3 img {
+  margin: 0 25%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+/* line 356, ../sass/screen.scss */
+section.portfolio div.row_2 div, section.portfolio div.row_4 div {
+  width: 25%;
+  height: 400px;
+  display: inline-block;
+  margin: -2px;
+}
+/* line 361, ../sass/screen.scss */
+section.portfolio div.row_2 div:nth-child(1), section.portfolio div.row_4 div:nth-child(1) {
+  background-color: #d8d8d8;
+}
+/* line 364, ../sass/screen.scss */
+section.portfolio div.row_2 div:nth-child(2), section.portfolio div.row_4 div:nth-child(2) {
+  background-color: #eaeaea;
+}
+/* line 367, ../sass/screen.scss */
+section.portfolio div.row_2 div:nth-child(3), section.portfolio div.row_4 div:nth-child(3) {
+  background-color: #f1f1f1;
+}
+/* line 370, ../sass/screen.scss */
+section.portfolio div.row_2 div:nth-child(4), section.portfolio div.row_4 div:nth-child(4) {
+  background-color: #f5f5f5;
+}
+/* line 375, ../sass/screen.scss */
+section.portfolio div.row_2 img, section.portfolio div.row_4 img {
+  margin: 0 25%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
