--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -435,14 +435,18 @@ section.portfolio {
 	}	
 }
 
+.fix-wrapper {
+	height: 100vh;
+	overflow: hidden;
 
 	section.team {
 		position: relative;
-		min-height: 100%;
+		height: 200%;
 		width: 100%;
 		padding-top: 70px;
 		background: #faf1e2 url("../gfx/team.jpg") no-repeat 47% 50%;
 		background-size: 40%;
+		background-attachment: fixed;
 
 		h3 {
 				font-family: 'Open Sans', sans-serif;
@@ -469,7 +473,7 @@ section.portfolio {
 			margin: 0 auto;
 			left: 0;
 			right: 0;
-			bottom: 50px;
+			bottom: 870px;
 			width: 160px;
 
 			-webkit-transition: background .3s ease-in-out;
@@ -491,9 +495,17 @@ section.portfolio {
 					background-color: rgba(0,0,0,.1);
 				}
 			}
+	}
 }
 
 
+
+aside#kontakt {
+	position: relative;
+	width: 100%;
+	height: 400px;
+	background: #000;
+}
 
 /*	aside#popup {
     background: rgba(255,255,255, 0.6);
